# Keylogger-Detector

./: CMakeLists.txt  README.md
include/: detector.h
src/: detector_linux.cpp  detector_win.cpp
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
